--- a/src/app/common/nav/navbar/navbar.component.html
+++ b/src/app/common/nav/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         </a>
         <ul class="dropdown-menu ml-4" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="registrar">{{ 'BTN_REGISTRAR' | translate}}</a></li>
-            <li><a class="dropdown-item" href="login">Ingresar</a></li>           
+            <li><a class="dropdown-item" href="login">{{ 'BTN_INGRESAR' | translate}}</a></li>           
         </ul>
         
         <!-- Icons -->
@@ -18,22 +18,22 @@
                       {{idioma}}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" (click)="setIdioma('es-CO')">Español</a></li>
-                      <li><a class="dropdown-item" (click)="setIdioma('en-US')">Inglés</a></li>
-                      <li><a class="dropdown-item" (click)="setIdioma('fr-FR')">Francés</a></li>               
+                      <li><a class="dropdown-item" (click)="setIdioma('es-CO')">{{ 'IDIOMA_ES' | translate}}</a></li>
+                      <li><a class="dropdown-item" (click)="setIdioma('en-US')">{{ 'IDIOMA_EN' | translate}}</a></li>
+                      <li><a class="dropdown-item" (click)="setIdioma('fr-FR')">{{ 'IDIOMA_FR' | translate}}</a></li>               
                     </ul>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#">{{ 'INICIO' | translate}}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" type="button" (click)="scrollToId('populares')">Populares</a>
+                    <a class="nav-link" type="button" (click)="scrollToId('populares')">{{ 'BTN_POPULARES' | translate}}</a>
                 </li>                
                 <li class="nav-item">
-                    <a class="nav-link" type="button" (click)="scrollToId('noticias')">Noticias Recientes</a>
+                    <a class="nav-link" type="button" (click)="scrollToId('noticias')">{{ 'RECIENTES' | translate}}</a>
                 </li>              
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="#">{{ 'CONTACTO' | translate}}</a>
                 </li>
             </ul>
         </div>
