--- a/src/app/common/popular/popular/popular.component.html
+++ b/src/app/common/popular/popular/popular.component.html
@@ -1,5 +1,5 @@
 <div class="content" id="populares">
-    <h1 class="title">Noticias Populares</h1>
+    <h1 class="title">{{ 'POPULARES' | translate}}</h1>
 
     <div class="container-lg my-3">
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
