--- a/src/app/common/noticias/noticias/noticias.component.html
+++ b/src/app/common/noticias/noticias/noticias.component.html
@@ -1,5 +1,5 @@
 <div id="noticias">
-    <h1 class="title">Noticias Recientes</h1>
+    <h1 class="title">{{ 'RECIENTES' | translate}}</h1>
     <div class="d-flex flex-wrap justify-content-center p-5">
         <div class="m-2" *ngFor="let noticia of noticias">
             <a [routerLink]="['/noticia', noticia.id]">
