--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>{{ 'INICIO' | translate}}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -17,15 +17,9 @@
     <div class="container">
         <div class="banner" id="home">
             <div class="content">
-                <h2 class="text-center mb-3">Bienvenidos a JorzonWeb </h2>
-                <h4 class="text-center">Tu Fuente Definitiva de Noticias de Anime</h4>
-                <p>En JorzonWeb, nos apasiona el mundo del anime y estamos emocionados de compartir 
-                   esa pasión contigo. Somos tu destino número uno para mantenerte al tanto de las 
-                   últimas novedades, emocionantes anuncios y análisis profundos del emocionante universo del anime.
-                   Nuestra misión es ofrecerte una experiencia única en la que puedas explorar el vasto y 
-                   diverso mundo del anime. Ya seas un veterano amante del anime o estés recién comenzando a descubrir 
-                   este emocionante género, nuestra página está diseñada para satisfacer todas tus necesidades.
-                </p>
+                <h2 class="text-center mb-3">{{ 'BIENVENIDO' | translate}}</h2>
+                <h4 class="text-center">{{ 'TU_FUENTE_DEFINITIVA' | translate}}</h4>
+                <p>{{ 'DESCRIPCION' | translate}}</p>
             </div>
             <div class="avatar">
                 <img src="/assets/images/luffy-one-piece-personaje-anime-y-pelicula_1630x2880_xtrafondos.com.jpg" alt="Avatar">
