--- a/src/app/registrar/registrar/registrar.component.html
+++ b/src/app/registrar/registrar/registrar.component.html
@@ -1,7 +1,7 @@
 <div class="background"></div>
 
 <nav class="nav p-4">
-    <a href="home"> Inicio </a>
+    <a href="home">{{ 'INICIO' | translate}}</a>
 </nav>
 <div class="main d-flex justify-content-center align-middle">
     <div class="content">
@@ -10,10 +10,10 @@
                 <div class="container d-flex justify-content-start">
 
                     <div>
-                        <p class="logo"> <i class="fa-solid fa-spider"></i>Jorzon Web</p>
-                        <h3> Bienvenidos! </h3>
-                        <h3> Agradecemos su apoyo </h3>
-                        <pre> Visita mis redes sociales </pre>
+                        <p class="logo"> <i class="fa-solid fa-spider"></i>{{ 'TITULO' | translate}}</p>
+                        <h3>{{ 'SALUDO' | translate}}</h3>
+                        <h3>{{ 'AGRADECIMIENTO' | translate}}</h3>
+                        <pre>{{ 'SOLICITUD' | translate}}</pre>
                         <div class="icon">
                             <a href="https://www.instagram.com/jorgeivangarzonsanchez/" target="_blank">
                                 <i class="fa-brands fa-instagram"></i>
@@ -37,37 +37,37 @@
 
                     <div class="container-fluid formulario">
                         <div class="d-flex justify-content-center">
-                            <h2 class="">Registrate</h2>
+                            <h2 class="">{{ 'LINK_REGISTRO' | translate}}</h2>
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
-                            <input type="text" class="form-control" formControlName="nombre" placeholder="Nombre"
+                            <input type="text" class="form-control" formControlName="nombre" placeholder="{{ 'PLACEHOLDER_NOMBRE' | translate}}"
                                 aria-label="Nombre" aria-describedby="basic-addon1">
                         </div>
 
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"></i></span>
-                            <input type="email" class="form-control" formControlName="correo" placeholder="Correo"
+                            <input type="email" class="form-control" formControlName="correo" placeholder="{{ 'PLACEHOLDER_CORREO' | translate}}"
                                 aria-label="Correo" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
                             <input type="password" class="form-control" formControlName="password"
-                                placeholder="Contraseña" aria-label="Contraseña" aria-describedby="basic-addon1">
+                                placeholder="{{ 'PLACEHOLDER_PASSWORD' | translate}}" aria-label="Contraseña" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
                             <input type="password" class="form-control" formControlName="confirmPassword"
-                                placeholder="Confirmar Contraseña" aria-label="Confirmar Contraseña"
+                                placeholder="{{ 'PLACEHOLDER_CONFIRMAR_PASSWORD' | translate}}" aria-label="Confirmar Contraseña"
                                 aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-3">
                             <label class="input-group-text" for="inputGroupSelect01"><i class="fa fa-id-badge"
                                     aria-hidden="true"></i></label>
                             <select class="form-select" id="inputGroupSelect01" formControlName="role">
-                                <option value="TIPO_USUARIO">Tipo de Usuario</option>
-                                <option value="USER">Usuario</option>
-                                <option value="ADMIN">Administrador</option>
+                                <option value="TIPO_USUARIO">{{ 'TIPO_USUARIO' | translate}}</option>
+                                <option value="USER">{{ 'USER' | translate}}</option>
+                                <option value="ADMIN">{{ 'ADMIN' | translate}}</option>
                             </select>
                         </div>
                         <div class="input-group mb-3" *ngIf="formGroup.get('rol')?.value =='ADMIN'">
