--- a/src/app/registrar/registrar/registrar.component.html
+++ b/src/app/registrar/registrar/registrar.component.html
@@ -70,7 +70,7 @@
                                 <option value="ADMIN">Administrador</option>
                             </select>
                         </div>
-                        <div class="input-group mb-3" *ngIf="formGroup.get('rol')?.value =='ADMIN'">
+                        <div class="input-group mb-3" *ngIf="formGroup.get('role')?.value =='ADMIN'">
                             <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
                             <input type="password" class="form-control" formControlName="llaveSecreta"
                                 placeholder="Ingrese el código de seguridad" aria-label="Ingrese el código de seguridad"
