--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -76,14 +76,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <h5 class="modal-title" id="exampleModalLabel">{{ 'ALERTA_MODAL.ACCESO' | translate}}</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 {{mensajeRespuesta}}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Aceptar</button>
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">{{ 'ALERTA_MODAL.ACEPTAR' | translate}}</button>
             </div>
         </div>
     </div>
