--- a/src/app/registrar/registrar/registrar.component.html
+++ b/src/app/registrar/registrar/registrar.component.html
@@ -73,7 +73,7 @@
                         <div class="input-group mb-3" *ngIf="formGroup.get('role')?.value =='ADMIN'">
                             <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
                             <input type="password" class="form-control" formControlName="llaveSecreta"
-                                placeholder="Ingrese el código de seguridad" aria-label="Ingrese el código de seguridad"
+                                placeholder="{{ 'PLACEHOLDER_CODIGO_SEGURIDAD' | translate}}" aria-label="Ingrese el código de seguridad"
                                 aria-describedby="basic-addon1">
                         </div>
                         <div class="d-flex justify-content-evenly mt-3">
@@ -81,7 +81,7 @@
                                 (click)="guardar()">
                                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
                                     *ngIf="loadingRegistro"></span>
-                                {{loadingRegistro ? 'Registrando, por favor espere' : 'Registrar'}}</button>
+                                {{loadingRegistro ? 'PAGINA_LOGIN.AVISO_ENVIO' : 'BTN_REGISTRAR' | translate }}</button>
                         </div>
 
                         <div class="alert alert-danger mt-1" role="alert" *ngIf="errors.length>0">
@@ -89,9 +89,9 @@
                         </div>
 
                         <div class="sign-up gap-1 mt-2">
-                            <p> ¿Ya tienes una cuenta?</p>
+                            <p>{{ 'PREGUNTA_LOGUEO' | translate}}</p>
                             <br>
-                            <a href="login" class="link-light">Iniciar Sesion</a>
+                            <a href="login" class="link-light">{{ 'LINK_LOGUEO' | translate}}</a>
                         </div>
                     </div>
                 </form>
