--- a/src/app/common/nav/navbar/navbar.component.html
+++ b/src/app/common/nav/navbar/navbar.component.html
@@ -27,7 +27,7 @@
                     <a class="nav-link active" aria-current="page" href="#">{{ 'INICIO' | translate}}</a>
                 </li>
                 <li class="nav-item" checkPermissions role="ADMIN">
-                    <a class="nav-link active" aria-current="page" href="#">Usuarios Registrados</a>
+                    <a class="nav-link active" aria-current="page" href="#">{{ 'REGISTRO' | translate}}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" type="button" (click)="scrollToId('populares')">{{ 'BTN_POPULARES' | translate}}</a>
