agregar idioma a el registro de usuarios

--- a/src/app/admin/usuarios/usuarios/usuarios.component.html
+++ b/src/app/admin/usuarios/usuarios/usuarios.component.html
@@ -15,14 +15,14 @@
 <!-- Navbar -->
     <div class="background"></div>
     <div class="container mt-xl-5">
-                <h2 class="text-center pt-5">Usuarios Registrados</h2>
+                <h2 class="text-center pt-5">{{ 'USUARIOS_REGISTRADOS' | translate}}</h2>
                 <table class="table">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Correo</th>
-                        <th scope="col">Rol</th>
+                        <th scope="col">{{ 'PLACEHOLDER_NOMBRE' | translate}}</th>
+                        <th scope="col">{{ 'PLACEHOLDER_CORREO' | translate}}</th>
+                        <th scope="col">{{ 'ROL' | translate}}</th>
                       </tr>
                     </thead>
                     <tbody>
