--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -28,5 +28,6 @@
     </div>
     <app-popular></app-popular>
     <app-noticias></app-noticias>
+    <app-contacto></app-contacto>
 </body>
 </html>
