--- a/src/app/noticia/noticia/noticia.component.html
+++ b/src/app/noticia/noticia/noticia.component.html
@@ -67,6 +67,7 @@
     </div>
     <app-popular></app-popular>
     <app-noticias></app-noticias>
+    <app-contacto></app-contacto>
 </body>
 
 </html>
