--- a/src/app/admin/usuarios/usuarios/usuarios.component.html
+++ b/src/app/admin/usuarios/usuarios/usuarios.component.html
@@ -35,5 +35,8 @@
                     </tbody>
                   </table>
             </div>
+            <app-popular></app-popular>
+            <app-noticias></app-noticias>
+            <app-contacto></app-contacto>
 </body>
 </html>
