--- a/src/app/common/nav/navbar/navbar.component.html
+++ b/src/app/common/nav/navbar/navbar.component.html
@@ -13,10 +13,12 @@
         <ul class="dropdown-menu ml-4" aria-labelledby="navbarDropdown" *ngIf="autenticado">
             <li><a class="dropdown-item" type="button" (click)="salir()">{{ 'SALIR' | translate}}</a></li>
         </ul>
-
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         <!-- Icons -->
-        <div class="d-flex" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,7 +44,7 @@
                     <a class="nav-link" type="button" (click)="scrollToId('noticias')">{{ 'RECIENTES' | translate}}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{{ 'CONTACTO' | translate}}</a>
+                    <a class="nav-link" type="button" (click)="scrollToId('contact')">{{ 'CONTACTO' | translate}}</a>
                 </li>
             </ul>
         </div>
