--- a/src/app/common/contacto/contacto/contacto.component.html
+++ b/src/app/common/contacto/contacto/contacto.component.html
@@ -1,5 +1,5 @@
 <div id="contact">
-    <h3 class="title text-center">Contacto</h3>
+    <h3 class="title text-center">{{ 'CONTACTO' | translate}}</h3>
     <ul class="contact">
         <a href="https://www.facebook.com/jorgeivan.garzonsanchez/" target="_blank">
             <li><i class="fab fa-facebook-f"></i></li>
